View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033552 | Community | OCCT:Foundation Classes | public | 2023-12-13 09:36 | 2024-07-18 21:25 |
Reporter | xuzhongxing | Assigned To | xuzhongxing | ||
Priority | normal | Severity | crash | ||
Status | verified | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2022 | ||
Summary | 0033552: Foundation Classes - NCollection_BaseMap move ctor clears wrong pointer | ||||
Description | NCollection_BaseMap(NCollection_BaseMap&& theOther) noexcept :theOther.myData1 = nullptr; theOther.myData1 = nullptr; | ||||
Steps To Reproduce | - | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33552 has been created by xuzhongxing. SHA-1: 7f0481f83c3baadc86a7d7dcc6fd0f05f55f9504 Detailed log of new commits: Author: Xu Zhongxing Date: Wed Dec 13 14:41:18 2023 +0800 NCollection_BaseMap move ctor clears correct member pointer |
|
Dear @xuzhongxing, Thank you for your patch! |
|
Please integrate branch: OCCT - CR33552 |
|
I will update a git massage. branch will be merged on Monday. Dear @xuzhongxing, Thank you for your investigation |
|
Branch CR33552_1 has been created by dpasukhi. SHA-1: 6ccacd1db73dafff040525ec60191eae12da6bb8 Detailed log of new commits: Author: Xu Zhongxing Date: Wed Dec 13 14:41:18 2023 +0800 0033552: Foundation Classes - NCollection_BaseMap move ctor clears wrong pointer Replaced correct class member to clear |
|
Dear bugmaster, please integrate: OCCT: CR33552_2 PROD: NO |
|
Branch CR33552_2 has been created by dpasukhi. SHA-1: 24c536577771308e6e864460af0c4cab770713b6 Detailed log of new commits: Author: Xu Zhongxing Date: Wed Dec 13 14:41:18 2023 +0800 0033552: Foundation Classes - NCollection_BaseMap move ctor clears wrong pointer Replaced correct class member to clear |
|
Combination - OCCT branch : IR-2023-12-15 master SHA - 83bb2a329d6bb51a194aa27abb11facde2f6a270 d2ef868da4165400c82322bd7f11b652decce47a Products branch : master SHA - 5dec4946337d2a162f4821cf085bd1e181f46ce8 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Ubuntu2004-64: OCCT Total CPU difference: 18269.079999999904 / 19196.92000000018 [-4.83%] Products Total CPU difference: 11554.499999999949 / 12290.319999999989 [-5.99%] Windows-64-VC142: OCCT Total CPU difference: 20132.90625 / 20986.796875 [-4.07%] Products Total CPU difference: 12359.828125 / 14282.375 [-13.46%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR33552_2 has been deleted by dpasukhi. SHA-1: 24c536577771308e6e864460af0c4cab770713b6 |
|
Branch CR33552_1 has been deleted by dpasukhi. SHA-1: 6ccacd1db73dafff040525ec60191eae12da6bb8 |
|
Branch CR33552 has been deleted by dpasukhi. SHA-1: 7f0481f83c3baadc86a7d7dcc6fd0f05f55f9504 |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-12-13 09:36 | xuzhongxing | New Issue | |
2023-12-13 09:36 | xuzhongxing | Assigned To | => akaftasev |
2023-12-13 09:42 | git | Note Added: 0114729 | |
2023-12-13 13:12 | akaftasev | Note Added: 0114730 | |
2023-12-13 13:12 | akaftasev | Status | new => resolved |
2023-12-13 13:12 | akaftasev | Steps to Reproduce Updated | |
2023-12-13 13:13 | akaftasev | Assigned To | akaftasev => bugmaster |
2023-12-13 13:13 | akaftasev | Status | resolved => reviewed |
2023-12-13 13:13 | akaftasev | Note Added: 0114731 | |
2023-12-13 14:18 | dpasukhi | Summary | NCollection_BaseMap move ctor clears wrong pointer => Foundation Classes - NCollection_BaseMap move ctor clears wrong pointer |
2023-12-13 14:18 | dpasukhi | Description Updated | |
2023-12-13 14:18 | dpasukhi | Assigned To | bugmaster => dpasukhi |
2023-12-13 14:18 | dpasukhi | Status | reviewed => assigned |
2023-12-13 14:19 | dpasukhi | Note Added: 0114732 | |
2023-12-15 00:42 | git | Note Added: 0114742 | |
2023-12-15 13:59 | dpasukhi | Status | assigned => resolved |
2023-12-15 14:01 | dpasukhi | Assigned To | dpasukhi => bugmaster |
2023-12-15 14:01 | dpasukhi | Status | resolved => reviewed |
2023-12-15 14:01 | dpasukhi | Note Added: 0114751 | |
2023-12-15 14:03 | git | Note Added: 0114752 | |
2023-12-15 14:03 | dpasukhi | Note Edited: 0114751 | |
2023-12-18 02:11 | vglukhik | Note Added: 0114762 | |
2023-12-18 02:17 | vglukhik | Changeset attached | => occt master 60792f26 |
2023-12-18 02:17 | xuzhongxing | Assigned To | bugmaster => xuzhongxing |
2023-12-18 02:17 | xuzhongxing | Status | reviewed => verified |
2023-12-18 02:17 | xuzhongxing | Resolution | open => fixed |
2024-07-18 21:24 | git | Note Added: 0116247 | |
2024-07-18 21:24 | git | Note Added: 0116249 | |
2024-07-18 21:25 | git | Note Added: 0116250 |