0033552: Foundation Classes - NCollection_BaseMap move ctor clears wrong pointer

Replaced correct class member to clear